--- a/src/components/PhotoCollage/PhotoCollage.css
+++ b/src/components/PhotoCollage/PhotoCollage.css
@@ -1,35 +1,32 @@
+/* Collage Container */
 .collage-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
   padding: 5px;
-
-
+  width: 100%;
 }
-
 
 .collage-item {
   flex: 1 0 calc(25% - 10px);
   margin: 5px;
-  overflow: hidden;
-  position: relative; 
-  max-height: 220px; /* Limit the maximum height of each item */
-  transition: opacity 0.3s ease, transform 0.3s ease;
-  
+  max-height: 220px;
+  border: black 2px solid;
+  border-radius: 4px;
 
 }
+
 
 .collage-image {
   width: 100%;
   height: 100%;
-  object-fit: cover; /* Maintain aspect ratio and crop images to fit within the item container */
+  object-fit: cover;
   cursor: pointer;
-
 }
 
 
-/* Creating modal for images*/
 
+/* Modal Overlay */
 .modal-overlay {
   position: fixed;
   top: 0;
@@ -40,9 +37,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
 }
 
+/* Modal */
 .modal {
   background-color: whitesmoke;
   border: 2px black solid;
@@ -78,12 +75,14 @@
   position: absolute;
   top: -25px;
   right: -25px;
-  background-color: rgba(255, 255, 255, 0.8); 
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 
-/* For screens with a maximum width of 490 pixels */
-@media only screen and (max-width: 490px) {
+
+
+/* Responsive Styles  */
+@media only screen and (max-width: 600px) {
   .collage-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -103,6 +102,5 @@
     width: calc(100% - 6px);
     max-height: 160px;
   }
-
 
 }
