--- a/src/containers/AboutUs/AboutUs.css
+++ b/src/containers/AboutUs/AboutUs.css
@@ -1,61 +1,44 @@
-
 .aboutus__grid-container {
-  
   display: grid;
   grid-template-areas:
     'h1 p'
     'slider slider';
-  grid-template-rows: auto 1fr; 
-  grid-template-columns: 1fr 2fr; 
+  grid-template-rows: auto 1fr;
+  grid-template-columns: 1fr 2fr;
 }
 
-  .heading-1{
-    grid-area: h1;
-  }
+.heading-1 {
+  grid-area: h1;
+}
 
-  .p__aboutus{
-    grid-area: p;
-    font-size: 20;
-    font-weight: 400;
-    padding-top: 20px;
-  
-  }
-  
-  .photo-slider {
-    padding-top: 60px;
-    grid-area: slider;
-  }
-  
-  /* Media Query for screens less than 1024px */
+.p__aboutus {
+  grid-area: p;
+  padding-top: 20px;
+}
 
+.photo-slider {
+  padding-top: 60px;
+  grid-area: slider;
+}
+
+/* Media Queries */
 @media only screen and (max-width: 1025px) {
-
   .aboutus__grid-container {
-   
     grid-template-areas:
       'h1'
       'p'
       'slider';
-    grid-template-rows: auto auto auto; /* Three rows with equal height */
+    grid-template-rows: auto auto auto; 
     grid-template-columns: 1fr;
   }
-  
 }
 
-
 @media only screen and (max-width: 900px) {
-
   .aboutus__grid-container {
-
     margin-left: 0;
   }
-
-  .photo-slider{
-
+  
+  .photo-slider {
     padding-top: 40px;
   }
 }
-
-
-
-
