--- a/src/containers/Header/Header.css
+++ b/src/containers/Header/Header.css
@@ -1,13 +1,14 @@
 .header {
-  min-height: calc(100vh);
+  height: 100vh; /* in case of not supporting browser */
+  height: 100svh;
   background-image: url(/src/assets/introBg.png);
   background-size: cover;
-  filter: contrast(200%);}
+  filter: contrast(200%);
+}
 
 .header__container {
   display: flex;
   margin-bottom: 110px;
-  
 }
 
 .dark-overlay {
@@ -16,8 +17,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.1); 
-  z-index: -1; 
+  background-color: rgba(0, 0, 0, 0.1);
+  z-index: -1;
 }
 
 .p__mission {
@@ -32,7 +33,6 @@
 .header__container--mission {
   flex-grow: 1;
   margin-left: 10%;
-  
 }
 
 .header__check--button {
@@ -43,123 +43,87 @@
   outline: none;
 }
 
+@media only screen and (max-width: 1280px) {
+  .header__check--button {
+    padding-right: 12%;
+  }
+}
 
-
-
-  @media only screen and (max-width: 1280px) {
-    .header__check--button {
-      padding-right: 12%;
-    }
-
+@media only screen and (max-width: 1100px) {
+  .header__container {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 0;
   }
 
-
-
-  @media only screen and (max-width: 1100px) {
-    .header__container {
-      display: flex;
-      flex-direction: column-reverse;
-      align-items: center;
-      justify-content: center;
-      margin-bottom: 0;
-     
-    }
-    
-    .header__container--mission{
-      margin-left: 0;
-      height: auto;
-    }
-
-    .p__mission {
-      margin-top: 12%;
-      width: 500px;
-      height: auto;
-     
-    }
-    
-    .header__check--button {
-      margin-top: 35%;
-      font-size: 54px;
-      padding-right: 0;
-    }
-
-    
-  }
-  
-
-  @media only screen and (max-width: 1051px) {
-    .header__check--button {
-      margin-top: 30%;
-    }
-   
-    .p__mission {
-      padding-top: 50px;
-      font-size: 20px;
-    }
-  }
-  
-
-
-  @media only screen and (max-width: 720px) {
-    .header__check--button {
-      margin-top: 40%;
-    }
+  .header__container--mission {
+    margin-left: 0;
+    height: auto;
   }
 
-  
-  @media only screen and (max-width: 600px) {
-
-    .p__mission {
-      width: auto;
-      height: auto;
-      padding: 50px 8%;
-    }
+  .p__mission {
+    margin-top: 12%;
+    width: 500px;
+    height: auto;
   }
 
-
-  @media only screen and (max-width: 541px) {
-
-    .header__check--button {
-      margin-top: 70%;
+  .header__check--button {
+    margin-top: 35%;
+    font-size: 54px;
+    padding-right: 0;
   }
-  }
+}
 
-
-  
-  @media only screen and (max-width: 542px) and (min-width: 539px)  {
-
-    .header__check--button{
-      margin-top: 75%;
-
-    }
-
+@media only screen and (max-width: 1051px) {
+  .header__check--button {
+    margin-top: 30%;
   }
 
-
-
-  @media only screen and (max-width: 470px) {
-
-
-    .header__container--mission{
-
-      margin-left: 0;
-    }
-    .header__check--button{
-     
-      font-size: 14px;
-      margin-top: 80%;
-    }
-  
+  .p__mission {
+    padding-top: 50px;
+    font-size: 20px;
   }
+}
 
-
-
- 
-
-  @media only screen and (max-width: 282px) {
-
-    .header__check--button{
-     
-      font-size: 9px;
-    }
+@media only screen and (max-width: 720px) {
+  .header__check--button {
+    margin-top: 40%;
   }
+}
+
+@media only screen and (max-width: 600px) {
+  .p__mission {
+    width: auto;
+    padding: 50px 8%;
+  }
+}
+
+@media only screen and (max-width: 541px) {
+  .header__check--button {
+    margin-top: 70%;
+  }
+}
+
+@media only screen and (max-width: 542px) and (min-width: 539px) {
+  .header__check--button {
+    margin-top: 75%;
+  }
+}
+
+@media only screen and (max-width: 470px) {
+  .header__container--mission {
+    margin-left: 0;
+  }
+  .header__check--button {
+    font-size: 14px;
+    margin-top: 80%;
+  }
+}
+
+@media only screen and (max-width: 282px) {
+  .header__check--button {
+    font-size: 9px;
+  }
+}
