--- a/src/containers/Products/Products.css
+++ b/src/containers/Products/Products.css
@@ -11,6 +11,7 @@
   min-height: 75svh;
 }
 
+/* Animations */
 .fade-in {
   opacity: 0;
 }
@@ -33,7 +34,7 @@
   display: flex;
   gap: 10px;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content:flex-start;
   align-items: center;
 }
 
@@ -72,6 +73,8 @@
 .menu-item {
   padding: 10px 10px 10px 0;
   text-align: left;
+  text-align: justify;
+
   margin-right: 70px;
   flex: 1.5;
 }
@@ -145,8 +148,7 @@ margin-bottom: 10px;
   .products__container {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  
     gap: 10px;
   }
 
